[gd_scene load_steps=3 format=3 uid="uid://b8q8q8q8q8q8q"]

[ext_resource type="Script" path="res://scripts/states/main_menu_state.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
text = "ALIEN FALL"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 48

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 160.0
offset_right = 250.0
offset_bottom = 190.0
grow_horizontal = 2
text = "Turn-Based Strategy Game"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NewGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "NEW GAME"

[node name="LoadGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "LOAD GAME"

[node name="OptionsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="TestButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "RUN TESTS"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.1.0"
horizontal_alignment = 2
vertical_alignment = 2
theme_override_font_sizes/font_size = 12
